:sparkles: 이벤트 리스너에서 이벤트 상태를 완료처리 하는 코드 추가